Prevented from showing an overflowed content of '.page' (overflow: hidden)

--- a/src/blocks/common.blocks/page/page.less
+++ b/src/blocks/common.blocks/page/page.less
@@ -12,6 +12,7 @@
   position: relative;
   z-index: 100;
   min-width: 320px;
+  overflow-x: hidden;
 
   background-color: #fff;
 
